--- a/src/app/component/task/task.component.html
+++ b/src/app/component/task/task.component.html
@@ -1,27 +1,47 @@
-<form [formGroup]="taskFormGroup" (ngSubmit)="onSubmit()">
+<form [formGroup]="taskFormGroup" (ngSubmit)="onSubmit()" class="space-y-6 p-2 bg-white">
     <div>
-        <label for="title">Title</label>
-        <input id="title" type="text" formControlName="titleForm" />
+        <label for="title" class="block text-sm/6 font-medium text-gray-900">Title</label>
+        <div class="mt-2">
+            <div
+                class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
+                <input type="text" name="title" id="title"
+                    class="block min-w-0 grow py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6"
+                    placeholder="0.00">
+            </div>
+        </div>
     </div>
     <div>
-        <label for="description">Description</label>
-        <input id="description" type="text" formControlName="description" />
+        <label for="description" class="block text-sm/6 font-medium text-gray-900">Description</label>
+        <div class="mt-2">
+            <div
+                class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
+                <input type="text" name="description" id="description"
+                    class="block min-w-0 grow py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6"
+                    placeholder="Description">
+            </div>
+        </div>
     </div>
     <div>
-        <label for="status">Status</label>
-        <select id="status" formControlName="status">
-            <option value="todo">TODO</option>
-            <option value="inProgress">In Progress</option>
-            <option value="done">Done</option>
-        </select>
+        <label for="status" class="block text-sm/6 font-medium text-gray-900">Status</label>
+        <div class="mt-2">
+            <div
+                class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[select:focus]:outline has-[select:focus]:outline-2 has-[select:focus]:-outline-offset-2 has-[select:focus]:outline-indigo-600">
+                <select id="status" formControlName="status"
+                    class="block w-full bg-transparent py-1.5 pl-1 pr-10 text-base text-gray-900 focus:outline-none sm:text-sm/6">
+                    <option value="todo">TODO</option>
+                    <option value="inProgress">In Progress</option>
+                    <option value="done">Done</option>
+                </select>
+            </div>
+        </div>
     </div>
-    <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+    <div class="flex justify-end space-x-3 pt-4">
         <button type="submit"
-            class="inline-flex w-full justify-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">
+            class="inline-flex justify-center rounded-md bg-blue-600 px-4 py-2 text-sm font-medium text-white hover:bg-blue-500 shadow-sm">
             Save Task
         </button>
         <button type="button"
-            class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">
+            class="inline-flex justify-center rounded-md bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-100 border border-gray-300 shadow-sm">
             Cancel
         </button>
     </div>
