feat: update task management functionality with task retrieval and form enhancements

--- a/src/app/component/task/task.component.html
+++ b/src/app/component/task/task.component.html
@@ -4,9 +4,9 @@
         <div class="mt-2">
             <div
                 class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
-                <input type="text" name="title" id="title"
+                <input type="text" name="title" id="title" formControlName="title"
                     class="block min-w-0 grow py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6"
-                    placeholder="0.00">
+                    placeholder="Title">
             </div>
         </div>
     </div>
@@ -15,7 +15,7 @@
         <div class="mt-2">
             <div
                 class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
-                <input type="text" name="description" id="description"
+                <input type="text" name="description" id="description" formControlName="description"
                     class="block min-w-0 grow py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6"
                     placeholder="Description">
             </div>
