--- a/src/app/component/task/task.component.html
+++ b/src/app/component/task/task.component.html
@@ -1,44 +1,42 @@
 <form [formGroup]="taskFormGroup" (ngSubmit)="onSubmit()" class="space-y-6 p-2 bg-white">
     <div>
-        <label for="title" class="block text-sm/6 font-medium text-gray-900">Title</label>
-        <div class="mt-2">
-            <div
-                class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
-                <input type="text" name="title" id="title" formControlName="title"
-                    class="block min-w-0 grow py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6"
-                    placeholder="Title">
-            </div>
+        <label for="title" class="block text-sm font-medium text-gray-900">Title</label>
+        <div
+            class="mt-2 flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
+            <input type="text" id="title" formControlName="title" class="block w-full py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400  focus:outline focus:outline-0 sm:text-sm/6
+                sm:text-sm" placeholder="Title" />
+        </div>
+        @if(submitted && taskFormGroup.get('title')?.hasError('required')){
+        <div class="text-sm text-red-600 mt-1">
+            Title is required
+        </div>
+        }
+    </div>
+    <div>
+        <label for="description" class="block text-sm font-medium text-gray-900">Description</label>
+        <div
+            class="mt-2 flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
+            <textarea id="description" formControlName="description"
+                class="block w-full py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline-none sm:text-sm"
+                placeholder="Description"></textarea>
         </div>
     </div>
     <div>
-        <label for="description" class="block text-sm/6 font-medium text-gray-900">Description</label>
-        <div class="mt-2">
-            <div
-                class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[input:focus-within]:outline has-[input:focus-within]:outline-2 has-[input:focus-within]:-outline-offset-2 has-[input:focus-within]:outline-indigo-600">
-                <input type="text" name="description" id="description" formControlName="description"
-                    class="block min-w-0 grow py-1.5 pl-1 pr-3 text-base text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0 sm:text-sm/6"
-                    placeholder="Description">
-            </div>
-        </div>
-    </div>
-    <div>
-        <label for="status" class="block text-sm/6 font-medium text-gray-900">Status</label>
-        <div class="mt-2">
-            <div
-                class="flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[select:focus]:outline has-[select:focus]:outline-2 has-[select:focus]:-outline-offset-2 has-[select:focus]:outline-indigo-600">
-                <select id="status" formControlName="status"
-                    class="block w-full bg-transparent py-1.5 pl-1 pr-10 text-base text-gray-900 focus:outline-none sm:text-sm/6">
-                    <option value="todo">TODO</option>
-                    <option value="inProgress">In Progress</option>
-                    <option value="done">Done</option>
-                </select>
-            </div>
+        <label for="status" class="block text-sm font-medium text-gray-900">Status</label>
+        <div
+            class="mt-2 flex items-center rounded-md bg-white pl-3 outline outline-1 -outline-offset-1 outline-gray-300 has-[select:focus]:outline has-[select:focus]:outline-2 has-[select:focus]:-outline-offset-2 has-[select:focus]:outline-indigo-600">
+            <select id="status" formControlName="status"
+                class="block w-full py-1.5 pl-1 pr-10 text-base text-gray-900 bg-transparent focus:outline-none sm:text-sm">
+                <option value="todo">TODO</option>
+                <option value="inProgress">In Progress</option>
+                <option value="done">Done</option>
+            </select>
         </div>
     </div>
     <div class="flex justify-end space-x-3 pt-4">
         <button type="submit"
             class="inline-flex justify-center rounded-md bg-blue-600 px-4 py-2 text-sm font-medium text-white hover:bg-blue-500 shadow-sm">
-            Save Task
+            Save
         </button>
         <button type="button" (click)="onCancel()"
             class="inline-flex justify-center rounded-md bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-100 border border-gray-300 shadow-sm">
