--- a/src/app/component/task-manager/task-manager.component.html
+++ b/src/app/component/task-manager/task-manager.component.html
@@ -1,10 +1,18 @@
 <div class="p-4">
-    <button (click)="onAddTask()" class="bg-blue-500 text-white px-4 py-2 rounded mb-4"> Add New Task </button>
+    <button (click)="onAddTask()" class="bg-blue-500 text-white px-4 py-2 rounded mb-4 flex place-self-end">
+        Add New Task
+    </button>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <!-- To Do -->
         <div>
-            <h2 class="text-lg font-bold mb-2">To Do</h2>
+            <div class="flex justify-between items-start mb-2">
+                <h2 class="text-lg font-bold">To Do</h2>
+                <span
+                    class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-blue-700/10 ring-inset">
+                    {{ todo.length }}
+                </span>
+            </div>
             <div cdkDropList id="todoList" class="min-h-[300px] p-2 bg-gray-100 rounded" [cdkDropListData]="todo"
                 [cdkDropListConnectedTo]="['inProgressList', 'doneList']" (cdkDropListDropped)="onDrop($event, 'todo')">
                 @for (task of todo; track $index) {
@@ -33,7 +41,13 @@
 
         <!-- In Progress -->
         <div>
-            <h2 class="text-lg font-bold mb-2">In Progress</h2>
+            <div class="flex justify-between items-start mb-2">
+                <h2 class="text-lg font-bold">In Progress</h2>
+                <span
+                    class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-blue-700/10 ring-inset">
+                    {{ inProgress.length }}
+                </span>
+            </div>
             <div cdkDropList id="inProgressList" class="min-h-[300px] p-2 bg-gray-100 rounded"
                 [cdkDropListData]="inProgress" [cdkDropListConnectedTo]="['todoList', 'doneList']"
                 (cdkDropListDropped)="onDrop($event, 'inProgress')">
@@ -65,7 +79,13 @@
 
         <!-- Done -->
         <div>
-            <h2 class="text-lg font-bold mb-2">Done</h2>
+            <div class="flex justify-between items-start mb-2">
+                <h2 class="text-lg font-bold">Done</h2>
+                <span
+                    class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-blue-700/10 ring-inset">
+                    {{ done.length }}
+                </span>
+            </div>
             <div cdkDropList id="doneList" class="min-h-[300px] p-2 bg-gray-100 rounded" [cdkDropListData]="done"
                 [cdkDropListConnectedTo]="['todoList', 'inProgressList']" (cdkDropListDropped)="onDrop($event, 'done')">
                 @for (task of done; track $index) {
@@ -99,7 +119,7 @@
     @if (taskModalVisible) {
     <div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
         <div class="bg-white p-4 rounded shadow-lg w-full max-w-md">
-            <app-task (closeModal)="onCloseModal()"></app-task>
+            <app-task (modalClosed)="onModalClosed($event)"></app-task>
         </div>
     </div>
     }
